--- a/frontend/components/Captcha/Captcha.module.scss
+++ b/frontend/components/Captcha/Captcha.module.scss
@@ -2,9 +2,6 @@
   margin-top: 30px;
   font-size: 14px;
   display: flex;
-  position: relative;
-  width: 100%;
-  border-bottom: 1px solid #F5F5F5;
   cursor: pointer;
 
   flex-flow: wrap;
@@ -35,17 +32,7 @@
 }
 
 .captcha__input {
-  outline: none;
-  font-family: "Gilroy", sans-serif;
-  font-size: 14px;
-  border: 1px solid #CDCDCD;
-  width: 51%;
-  padding: 15px 10px;
-  cursor: pointer;
-
-  &:hover {
-    border-color: #D4AA00;
-  }
+  flex: 1;
 }
 
 .captcha__input_err {
@@ -57,13 +44,11 @@
 }
 
 .captcha__img {
-  max-width: 241px;
-  max-height: 46px;
-  width: 44%;
-  height: 100%;
+  height: 56px;
+  flex: 1;
   display: flex;
-  justify-content: center;
   overflow: hidden;
+  margin: 0 1rem;
 
   img {
     width: auto;
@@ -77,8 +62,6 @@
 
 
 .captcha__refreshBtn {
-  position: absolute;
-  right: 0;
   width: 24px;
   height: 24px;
   -webkit-mask: url("images/block-form_refresh.svg") center no-repeat;
