--- a/frontend/pages/registration/Registration.module.scss
+++ b/frontend/pages/registration/Registration.module.scss
@@ -105,8 +105,7 @@
 }
 
 .formPage__text {
-  margin-top: 50px;
-  margin-bottom: 0;
+  margin: 1.5rem 0 .5rem;
   text-align: center;
   width: 100%;
 }
@@ -193,7 +192,7 @@
 
 .forgotPassword {
   color: #0000FF;
-  margin-top: 10px;
+  margin-top: 1.4rem;
 
   &:hover {
     color: #D4AA00;
