--- a/frontend/components/FeedbackForm/Form.module.scss
+++ b/frontend/components/FeedbackForm/Form.module.scss
@@ -243,7 +243,7 @@
   flex-flow: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0 0 1.5rem;
+  margin: 0 0 1.5rem;
 
   .inputRow {
     width: 48%;
