--- a/frontend/pages/[release]/Release.module.scss
+++ b/frontend/pages/[release]/Release.module.scss
@@ -30,18 +30,12 @@
   }
 }
 
-.release_wrapper {
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-
-}
-
-.release_column_img { //Todo Сделать обложку квадратной
-  max-width: 580px;
-  max-height: 455px;
-  margin-top: 40px;
+.release_column_img {
+  max-width: 500px;
+  max-height: 500px;
+  margin-top: 4vh;
+  overflow: hidden;
+  border-radius: 10px 10px 0 0;
 }
 
 .release_column {
@@ -49,7 +43,7 @@
   background: #FFFFFF;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   border-radius: 0 0 10px 10px;
-  max-width: 580px;
+  max-width: 500px;
   width: 100%;
   @media (max-width: 767px) {
     padding: 1rem;
@@ -62,7 +56,7 @@
   margin: 1rem 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  max-width: 580px;
+  max-width: 500px;
   width: 100%;
   @media (max-width: 767px) {
     padding: 1rem;
