add yandex metrics and catalog section on home page

--- a/frontend/pages/artist/Artist.module.scss
+++ b/frontend/pages/artist/Artist.module.scss
@@ -26,6 +26,9 @@
   background-position: center;
   filter: blur(15px);
   -webkit-filter: blur(15px);
+  -moz-filter: blur(15px);
+  -o-filter: blur(15px);
+  -ms-filter: blur(15px);
   transform: scale(1.1);
   opacity: .6;
 }
