--- a/frontend/pages/[release]/Release.module.scss
+++ b/frontend/pages/[release]/Release.module.scss
@@ -36,6 +36,10 @@
   margin-top: 4vh;
   overflow: hidden;
   border-radius: 10px 10px 0 0;
+
+  & span {
+    display: block !important;
+  }
 }
 
 .release_column {
