--- a/frontend/components/List/List.module.scss
+++ b/frontend/components/List/List.module.scss
@@ -1,155 +1,19 @@
 .list {
-  &:last-child {
-    background-color: #0000FF;
-  }
-}
-
-.title__part {
-  margin-top: 154px;
-  display: flex;
-  flex-flow: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  @media (max-width: 1023px) {
-    flex-flow: row wrap;
-    justify-content: flex-start;
-  }
-  @media (max-width: 767px) {
-    margin-top: 70px;
-  }
-}
-
-
-.title__numbers {
-  text-transform: uppercase;
-  background: linear-gradient(90deg, rgba(52, 52, 255, 1) 0%, rgba(255, 101, 52, 1) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  line-height: 1;
-  display: block;
-
-  p {
-    font-family: Termina, sans-serif;
-    font-size: 70px;
-    font-weight: 700;
-
-    letter-spacing: 2px;
-
-    &::after {
-      content: '+';
-    }
-  }
-
-  span {
-    font-size: 18px;
-    font-weight: 900;
-    font-family: "Gilroy", sans-serif;
-    margin-top: 4px;
-  }
-
-  @media (max-width: 1023px) {
-    margin-top: 20px;
-    &:last-child {
-      margin-left: 55px;
-    }
-  }
-
-  @media (max-width: 767px) {
-    p {
-      font-size: 50px;
-    }
-    span {
-      font-size: 14px;
-    }
-    &:last-child {
-      margin-left: 0;
-    }
-  }
-}
-
-.title__numbers_first {
-  margin-left: 10%;
-  @media (max-width: 1023px) {
-    margin-left: 0;
-  }
-}
-
-.slider__arrow {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-right: 3px;
-  width: 46px;
-  height: 46px;
-  border-radius: 50%;
-  border: 3px solid #D4AA00;
-  background: #ffffff;
-  cursor: pointer;
-  top: calc((100% - 46px) / 2);
-  left: 0;
-  z-index: 5;
-  opacity: 0;
-
-  &:hover {
-    border-color: #0000FF;
-
-    path {
-      stroke: #0000FF;
-    }
-  }
-}
-
-.slider__arrow_next {
-  transform: scale(-1, 1);
-  left: unset;
-  right: 4.5%;
-}
-
-.row {
-  margin: 0 auto 110px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  @media (max-width: 767px) {
-    flex-flow: column;
-    justify-content: flex-start;
-  }
-}
-
-.row_main {
-  display: block;
-  margin-bottom: 0;
-  position: relative;
-
-  .slick-list {
-    overflow: hidden;
-  }
-
-  .slick-track {
-    display: flex;
-  }
-
-  &:hover .slider__arrow {
-    opacity: 1;
-  }
+  padding: 2rem 0 0;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .item {
-  flex: 1;
-  margin-bottom: 3rem;
+  width: 25%;
+  margin-bottom: 2rem;
+  padding: 0 1rem;
 }
 
-.item_img {
-  max-width: 346px;
-  max-height: 346px;
-  width: 100%;
-  height: 100%;
+.item_img_container {
+  width: 220px;
   border-radius: 5px;
   overflow: hidden;
-  cursor: pointer;
 
   &:hover {
     transition: all 0.3s ease-in-out;
@@ -254,3 +118,4 @@
     width: 100%;
   }
 }
+
