--- a/frontend/components/Header/Header.module.scss
+++ b/frontend/components/Header/Header.module.scss
@@ -176,8 +176,8 @@
 .personalAreaButton {
   border-radius: 50%;
   position: relative;
-  width: 2.5rem;
-  height: 2.5rem;
+  min-width: 2.5rem;
+  min-height: 2.5rem;
   cursor: pointer;
   overflow: hidden;
 
