--- a/frontend/components/List/List.module.scss
+++ b/frontend/components/List/List.module.scss
@@ -1,18 +1,17 @@
 .list {
   padding: 2rem 0 0;
   flex-wrap: wrap;
-  justify-content: space-evenly;
 }
 
 .item_container {
-  width: calc(25% - 2rem);
+  flex-basis: 25%;
   margin-bottom: 2rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
 
   @media (max-width: 767px) {
-    width: calc(50% - 1rem);
+    flex-basis: 50%;
     padding: .5rem;
   }
 }
