--- a/frontend/components/Suggestion/Suggestion.module.scss
+++ b/frontend/components/Suggestion/Suggestion.module.scss
@@ -18,13 +18,14 @@
   }
 }
 
+
 .text_part {
   display: flex;
   flex-flow: column;
   width: 25rem;
   padding-top: 3rem;
   padding-right: 2rem;
-  background: #F4F4F4;
+
   position: relative;
   z-index: 10;
 
@@ -35,7 +36,6 @@
     content: '';
     width: 30vw;
     height: 100%;
-    background: #F4F4F4;
   }
 
   @media (max-width: 1023px) {
@@ -84,6 +84,7 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
   z-index: 5;
+
 
   @media (max-width: 1023px) {
     margin-top: 545px;
@@ -439,7 +440,7 @@
   border-radius: 10px;
   font-family: Gilroy, sans-serif;
   font-style: normal;
-  height: 80vh;
+  height: 90vh;
 
   @media (max-width: 1023px) {
     max-width: 566px;
@@ -513,7 +514,7 @@
 }
 
 .modal__contactsBtn {
-  margin: 0 auto;
+  margin: 0px auto;
   display: flex;
   justify-content: center;
   align-items: center;
