--- a/frontend/components/Suggestion/Suggestion.module.scss
+++ b/frontend/components/Suggestion/Suggestion.module.scss
@@ -459,6 +459,7 @@
 .modal__header {
   display: flex;
   justify-content: space-between;
+  width: 85%;
   margin-bottom: 25px;
   @media (max-width: 767px) {
     flex-flow: column;
@@ -470,6 +471,7 @@
   font-size: 36px;
   line-height: 140%;
   margin: 2rem 0;
+  width: 50%;
   color: #052525;
 
   @media (max-width: 1023px) {
@@ -484,12 +486,14 @@
 }
 
 .modal__description {
+  overflow: scroll;
   font-style: normal;
+
   font-weight: normal;
   font-size: 20px;
   line-height: 140%;
   overflow-y: scroll;
-  height: 60%;
+  height: 50%;
 
   p {
     margin-bottom: 20px;
@@ -597,10 +601,14 @@
 .modal__slide {
   width: 185px;
   padding: 15px;
-  min-height: 220px;
+  height: 350px;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   display: flex;
+  overflow: hidden;
   flex-flow: column;
   cursor: pointer;
 }
