--- a/frontend/pages/artist/Artist.module.scss
+++ b/frontend/pages/artist/Artist.module.scss
@@ -54,7 +54,7 @@
   display: flex;
   align-items: flex-end;
   position: relative;
-  bottom: -4rem;
+  top: 30px;
   margin: 1rem 0;
   flex-grow: 1;
 
@@ -69,6 +69,7 @@
   padding: 2rem;
   flex-grow: 6;
   color: white;
+  margin-top: 50px;
   flex-direction: column;
 
   @media (max-width: 767px) {
@@ -242,10 +243,19 @@
 }
 
 .btn {
-  margin-right: 1rem;
+  margin: 5px;
   min-width: 10rem;
 }
-
+.textField {
+  margin-bottom: 10px;
+}
+.modalHeader {
+  margin-bottom: 20px;
+}
+.book__button {
+  background-color: #D4AA00;
+  margin-top: 15px;
+}
 .help_btn {
   cursor: pointer;
 
