--- a/frontend/pages/registration/Registration.module.scss
+++ b/frontend/pages/registration/Registration.module.scss
@@ -92,11 +92,13 @@
 
 .formPage__checkboxText {
   color: #050505;
+  display: flex;
   margin-bottom: 0;
 }
 
 .formPage__link {
   color: #050505;
+  margin-left: 4px;
   text-decoration: underline;
 
   &:hover {
@@ -154,6 +156,8 @@
   }
 }
 
+
+
 .vinylRecordReg {
   width: 733px;
   height: 733px;
@@ -165,8 +169,11 @@
   .vinylRecordReg__center {
     width: 300px;
     height: 300px;
+    position: absolute;
     top: calc((100% - 300px) / 2);
+    text-transform: capitalize;
     left: calc((100% - 300px) / 2);
+    animation: 15s rotate-vinyl linear infinite;
 
     text {
       font-size: 35px;
@@ -182,6 +189,15 @@
   }
 }
 
+@keyframes rotate-vinyl {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .formPage__notes {
   position: absolute;
   width: 269px;
@@ -189,7 +205,30 @@
   top: calc((100% - 186px) / 2);
   left: calc((100% - 269px) / 2 - 335px);
 }
-
+.bgline1 {
+  position: absolute;
+  left: 0;
+  top: 0
+}
+.bgline2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.bgline3 {
+  position: absolute;
+  top: 0;
+}
+.bgline3M {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.bgline4 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
 .forgotPassword {
   color: #0000FF;
   margin-top: 1.4rem;
