--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -299,21 +299,21 @@ a {
   width: 66px;
   height: 66px;
   top: 25px;
-  right: 400px;
+  right: 370px;
 }
 
 .music-services_reg3 {
-  width: 44px;
-  height: 44px;
+  width: 55px;
+  height: 55px;
   left: 400px;
   bottom: 85px;
 }
 
 .music-services_reg4 {
-  width: 40px;
-  height: 40px;
-  right: 418px;
-  bottom: 72px;
+  width: 50px;
+  height: 50px;
+  right: 320px;
+  bottom: 35%;
 }
 
 .vector__bg {
@@ -459,7 +459,8 @@ a {
 .vector__bg_right-small {
   position: absolute;
   right: -2%;
-  bottom: -16%;
+  top: 11%;
+
   width: 218px;
   height: 310px;
   z-index: -1;
@@ -509,10 +510,11 @@ a {
 }
 
 .vector__footer {
+  position: absolute;
   width: 218px;
   z-index: 1;
   height: 310px;
-  bottom: 7%;
+  bottom: 3%;
   left: -70px;
 
   @media (max-width: 1439px) {
