--- a/frontend/components/List/List.module.scss
+++ b/frontend/components/List/List.module.scss
@@ -1,4 +1,9 @@
 .list {
+@media (max-width: 640px) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   padding: 2rem 0 0;
   flex-wrap: wrap;
 }
