--- a/frontend/components/Suggestion/Suggestion.module.scss
+++ b/frontend/components/Suggestion/Suggestion.module.scss
@@ -1,5 +1,5 @@
 .blockSuggestion {
-  background: #F4F4F4;
+  background: #f4f4f4;
   padding: 86px 0 100px;
   @media (max-width: 1023px) {
     padding: 60px 0 100px;
@@ -25,7 +25,6 @@
   width: 25rem;
   padding-top: 3rem;
   padding-right: 2rem;
-
   position: relative;
   z-index: 10;
 
@@ -33,7 +32,7 @@
     position: absolute;
     top: 0;
     left: calc(-30vw + 1px);
-    content: '';
+    content: "";
     width: 30vw;
     height: 100%;
   }
@@ -51,6 +50,9 @@
 
   @media (max-width: 767px) {
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: static;
   }
 }
@@ -64,7 +66,6 @@
   @media (max-width: 767px) {
     font-size: 40px;
   }
-
 }
 
 .column__text {
@@ -82,12 +83,13 @@
 
 .column__btn {
   margin-top: 2rem;
+  width: fit-content;
   margin-bottom: 2rem;
   z-index: 5;
 
-
   @media (max-width: 1023px) {
-    margin-top: 545px;
+    margin-top: 530px;
+
   }
   @media (max-width: 767px) {
     margin-top: 0;
@@ -100,11 +102,18 @@
 .column__slider :global {
   display: block;
   width: calc(100% - 25rem);
-  position: relative;
-  padding: 3rem 1rem;
 
+  position: relative;
   .slick-track {
     display: flex;
+  }
+  .slick-list {
+    @media (max-width: 1023px) and (min-width: 776px) {
+      margin-top: 100px;
+      width: 100vw;
+      padding: 0 20px;
+    }
+    overflow-x: hidden;
   }
 
   @media (max-width: 1023px) {
@@ -116,6 +125,9 @@
   @media (max-width: 767px) {
     flex-flow: column;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0;
     margin-top: 15px;
     width: 100%;
@@ -131,7 +143,7 @@
   align-items: center;
   width: 46px;
   height: 46px;
-  border: 3px solid #D4AA00;
+  border: 3px solid #d4aa00;
   border-radius: 50%;
   font-size: 0;
   outline: none;
@@ -185,7 +197,7 @@
   max-width: 380px;
   width: 100%;
   height: 448px;
-  color: #FFFFFF;
+  color: #ffffff;
   position: relative;
   overflow: hidden;
   cursor: pointer;
@@ -222,7 +234,7 @@
 
 .slider__item_1 {
   padding: 50px 30px 30px 30px;
-
+  width: 100%;
   @media (max-width: 1023px) {
     padding: 40px 30px 30px 30px;
     .slider__img {
@@ -236,23 +248,21 @@
       height: 132px;
     }
   }
-
 }
 
 .slider__item_2 {
   padding: 0 30px 30px 30px;
-
-
+  width: 100%;
   .slider__img {
-    position: relative;
-    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   @media (max-width: 1023px) {
     .slider__img {
       width: 300px;
       height: 170px;
-
     }
   }
   @media (max-width: 767px) {
@@ -261,14 +271,11 @@
       height: 140px;
     }
   }
-
-
 }
 
 .slider__item_3 {
   padding: 0 30px 30px 30px;
-
-
+  width: 100%;
   .slider__img {
     top: -30px;
     left: 0;
@@ -282,7 +289,6 @@
   }
 
   @media (max-width: 1023px) {
-
   }
   @media (max-width: 767px) {
     .slider__img {
@@ -290,17 +296,14 @@
       height: 140px;
     }
   }
-
-
 }
 
 .slider__item_4 {
-
+  width: 100%;
   @media (max-width: 1023px) {
     .slider__img {
       width: 277px;
       height: 177px;
-
     }
   }
   @media (max-width: 767px) {
@@ -309,21 +312,22 @@
       height: 143px;
     }
   }
-
 }
 
 .slider__item_5 {
+  width: 100%;
 
   .slider__img {
-    left: 50%;
-    transform: translate(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+position: unset;
   }
 
   @media (max-width: 1023px) {
     .slider__img {
       width: 147px;
       height: 143px;
-
     }
   }
   @media (max-width: 767px) {
@@ -387,7 +391,6 @@
     opacity: 0.9;
     order: 2;
   }
-
 }
 
 .slider__img {
@@ -401,7 +404,6 @@
     transform: unset !important;
   }
 }
-
 
 .slider__buttonMore {
   display: none;
@@ -417,8 +419,7 @@
 
 .modal {
   justify-content: center;
-   align-items: center;
-
+  align-items: center;
 
   & > div:first-of-type {
     background: inherit;
@@ -448,7 +449,11 @@
   }
 
   @media (max-width: 767px) {
-    max-width: 280px;
+    max-width: 85%;
+    justify-content: center;
+    align-items: center;
+    height: 95%;
+    margin: 0 auto;
     padding: 20px;
     display: flex;
     flex-flow: column;
@@ -530,7 +535,7 @@
 
   @media (max-width: 767px) {
     margin-top: 70px;
-    order: 4
+    order: 4;
   }
 }
 
@@ -541,7 +546,7 @@
 
   &:hover {
     svg rect {
-      fill: #D4AA00;
+      fill: #d4aa00;
     }
   }
 
@@ -596,7 +601,6 @@
     top: 0;
     left: 0;
   }
-
 }
 
 .modal__slide {
