--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -96,7 +96,7 @@ a {
 
 .content {
   width: 100%;
-  max-width: 1220px;
+  max-width: 1280px;
   padding: 0 20px;
   margin: 0 auto;
   color: $gray-dark-color;
@@ -351,7 +351,7 @@ a {
   width: 526px;
   height: 728px;
   top: 15%;
-  right: -150px;
+  right: -170px;
 
   @media (max-width: 1439px) {
     right: calc((100% - 526px) / 2 - 640px);
@@ -696,6 +696,12 @@ a {
   vertical-align: middle;
   object-fit: contain;
   width: 100% !important;
+  position: relative !important;
+  height: unset !important;
+}
+.square_release {
+  vertical-align: middle;
+  object-fit: contain;
   position: relative !important;
   height: unset !important;
 }
