--- a/frontend/components/Suggestion/Suggestion.module.scss
+++ b/frontend/components/Suggestion/Suggestion.module.scss
@@ -373,15 +373,15 @@ position: unset;
 }
 
 .slider__details {
-  display: flex;
-  flex-flow: column;
-  padding: 0 !important;
+
+  padding: 0 ;
 }
 
 .slider__text {
   font-size: 16px;
   line-height: 1.4;
   font-weight: 100;
+  color: white;
   margin-top: 15px;
   @media (max-width: 767px) {
     font-size: 14px;
