yandex metrika genders and ages deleted

--- a/frontend/pages/release/statistics/Statistics.module.scss
+++ b/frontend/pages/release/statistics/Statistics.module.scss
@@ -169,6 +169,8 @@
 .statistics__tablet__main__content {
   margin-top: 15px;
   width: 100%;
+  overflow: hidden;
+  height: 350px;
   display: flex;
   flex-flow: column;
   @media (max-width: 767px) {
@@ -249,7 +251,7 @@
 
 .statistics__tablet__row {
   margin-bottom: 10px;
-  padding-top: 19px;
+  padding-top: 10px;
   border-top: 1px dashed #b1b1b1;
   display: flex;
   align-items: center;
