--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -5,8 +5,18 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
@@ -16,7 +26,9 @@ body {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   border: none;
@@ -34,7 +46,13 @@ button {
   background: transparent;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
@@ -57,14 +75,14 @@ a {
 }
 
 .block {
-   width: 100%;
+  width: 100%;
   display: flex;
   flex-flow: column;
   flex-grow: 1;
   align-items: flex-start;
   margin: 0 auto;
-   position: relative;
-   @media (max-width: 767px) {
+  position: relative;
+  @media (max-width: 767px) {
     align-items: center;
   }
 }
@@ -76,7 +94,7 @@ a {
   align-items: flex-start;
   margin: 0 auto;
 
-   @media (max-width: 767px) {
+  @media (max-width: 767px) {
     align-items: center;
   }
 }
@@ -134,7 +152,7 @@ a {
 }
 
 .title {
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 65px;
@@ -153,7 +171,7 @@ a {
   font-weight: 700;
   text-transform: uppercase;
   color: $white-color;
-  background: #D4AA00;
+  background: #d4aa00;
   border-radius: 5px;
   cursor: pointer;
   transition: ease-in-out all 0.3s;
@@ -166,7 +184,6 @@ a {
   &:hover {
     opacity: 0.7;
   }
-
 }
 
 .tl_btn_blue {
@@ -176,17 +193,16 @@ a {
 .tl-input {
   width: 100%;
   height: 31px;
-  border-bottom: 1px solid #CDCDCD;
+  border-bottom: 1px solid #cdcdcd;
   padding-bottom: 10px;
   outline: none;
   font-family: "Gilroy", sans-serif;
   font-size: 14px;
 
   &:hover {
-    border-bottom-color: #D4AA00;
+    border-bottom-color: #d4aa00;
   }
 }
-
 
 .music-services {
   position: absolute;
@@ -428,7 +444,7 @@ a {
 .vector__bg_7 {
   width: 685px;
   height: 708px;
- bottom: -50%;
+  bottom: -50%;
 
   z-index: -1;
   @media (max-width: 1023px) {
@@ -456,7 +472,6 @@ a {
   }
 }
 
-
 .vector__bg_10 {
   width: 343px;
   height: 489px;
@@ -466,7 +481,6 @@ a {
     display: none;
   }
 }
-
 
 .vector__bg_right-small {
   position: absolute;
@@ -487,6 +501,10 @@ a {
   width: 164px;
   height: 234px;
   z-index: -1;
+
+  @media (max-width: 1520px) {
+    right: -100px;
+  }
 
   @media (max-width: 767px) {
     display: none;
@@ -529,15 +547,14 @@ a {
   bottom: 3%;
   left: -70px;
 
-  @media (max-width: 1439px) {
-    left: calc((100% - 218px) / 2 - 660px);
+  @media (max-width: 1520px) {
+    left: calc((100% - 218px) / 2 - 740px);
   }
 
   @media (max-width: 1023px) {
     display: none;
   }
 }
-
 
 .container {
   padding: 0 2rem;
@@ -602,8 +619,15 @@ a {
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-  Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family:
+    Menlo,
+    Monaco,
+    Lucida Console,
+    Liberation Mono,
+    DejaVu Sans Mono,
+    Bitstream Vera Sans Mono,
+    Courier New,
+    monospace;
 }
 
 .grid {
@@ -622,7 +646,9 @@ a {
   text-decoration: none;
   border: 1px solid $gray-light-color;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition:
+    color 0.15s ease,
+    border-color 0.15s ease;
   max-width: 300px;
 }
 
@@ -663,7 +689,8 @@ a {
     padding: 1rem 0 1rem 3rem;
   }
 
-  h1, h2 {
+  h1,
+  h2 {
     text-align: center;
     margin: 1rem 0;
   }
@@ -674,12 +701,12 @@ a {
 }
 
 .link {
-  color: #0000FF;
+  color: #0000ff;
   transition: color 0.3s ease-in-out;
 
   &:hover {
     text-decoration: none;
-    color: #D4AA00;
+    color: #d4aa00;
   }
 }
 
