--- a/frontend/components/Articles/Articles.module.scss
+++ b/frontend/components/Articles/Articles.module.scss
@@ -18,12 +18,13 @@
 
 .articles {
   display: flex;
-  margin-top: 260px;
+  margin-top: 160px;
   gap: 20px;
-  padding-bottom: 150px;
+  margin-bottom: 100px;
 
   @media (max-width: 1023px) {
     margin-top: 70px;
+    margin-bottom: 70px;
   }
 }
 
