--- a/frontend/components/Videos/Videos.module.scss
+++ b/frontend/components/Videos/Videos.module.scss
@@ -24,7 +24,26 @@
 
 .video {
   width: 100%;
-  height: 200px;
+  height: 234px;
+
+  @media (max-width: 1200px) {
+    height: 210px;
+  }
+  @media (max-width: 1100px) {
+    height: 170px;
+  }
+  @media (max-width: 960px) {
+    height: 130px;
+  }
+  @media (max-width: 768px) {
+    height: 190px;
+  }
+  @media (max-width: 600px) {
+    height: 140px;
+  }
+  @media (max-width: 480px) {
+    height: 40vw;
+  }
 }
 
 .video__container {
