--- a/frontend/components/Suggestion/Suggestion.module.scss
+++ b/frontend/components/Suggestion/Suggestion.module.scss
@@ -193,7 +193,7 @@
 .slider__item {
   display: flex !important;
   flex-flow: column;
-  margin-right: 0;
+  margin-right: 20px;
   padding: 30px;
   border-radius: 5px;
   max-width: 380px;
@@ -204,6 +204,10 @@
   overflow: hidden;
   cursor: pointer;
 
+  @media (max-width: 1340px) {
+    margin-right: 15px;
+  }
+
   @media (min-width: 768px) {
     &:hover {
       .slider__effect {
@@ -212,10 +216,6 @@
         transform: scale(100);
       }
     }
-  }
-
-  &:last-child {
-    margin-right: 0;
   }
 
   @media (max-width: 1023px) {
